Handle binary files in module